objects/LLC_BI__third_party_report__c.object
<CustomObject>
    <description>Form to enable Pods to order Third Party Reports</description>
    <fields>
        <fullName>LLC_BI__Building_Size_Sq_Ft__c</fullName>
        <description>This field is optional and specifies the subject facility&apos;s building size. It is manually populated.</description>
        <label>Building Size (Sq Ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Property_Use__c</fullName>
        <description>This field is optional and describes the subject property/building&apos;s current usage. It is manually populated.</description>
        <label>Current Property Use / Occupants</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EPA_Assessment__c</fullName>
        <description>This field is optional and manually selected when entering third party report detail about an EPA Assessment. The picklist options available are DEPENDENT on Order Type being set as EPA Assessment. If selected, allows for the dropdown values as shown in this picklist [ RSRA, Phase 1, Phase 2 ]</description>
        <inlineHelpText>Dependent on &quot;Order Type&quot; being set as EPA. Values are RSRA, Phase 1, and Phase 2</inlineHelpText>
        <label>EPA Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Order_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RSRA</fullName>
                </value>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Transaction Screen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__EPA_Vendor__c</fullName>
        <description>This picklist is optional and manually selected when entering third party report detail about an EPA Assessment. It is a list of vendors to have 3rd part reports ordered for when EPA Assessment Type is selected (helps run 3rd party reports ordering)</description>
        <label>EPA Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__EPA_Assessment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AEI</fullName>
                </value>
                <value>
                    <fullName>PES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field specifies the ordered Third Party Report&apos;s associated Loan.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Third Party Reports</relationshipLabel>
        <relationshipName>Third_Party_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order_Type__c</fullName>
        <description>This field specifies the Type of Third Party Report. Field values can be used to trigger workflow which updates the Record Type and corresponding Page Layout.</description>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As Is</fullName>
                </value>
                <value>
                    <fullName>As Built</fullName>
                </value>
                <value>
                    <fullName>As Constructed</fullName>
                </value>
                <value>
                    <fullName>EPA Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Property_Use_s__c</fullName>
        <description>This field specifies the text value used to document previous use(s) of subject property. Value can have impact on report findings (e.g. Subject property was previously a Gas Station, thus ground water contamination is likely).</description>
        <label>Previous Property Use(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Address__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s address. It is manually populated.</description>
        <label>Property Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_County__c</fullName>
        <description>This field is optional and specifies the  subject property&apos;s county. It is manually populated.</description>
        <label>Property County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Description__c</fullName>
        <description>This field is optional and describes the subject property. It is manually populated.</description>
        <label>Property Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Status__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s status (Land Only, Improved, Under Construction, etc.). It is manually populated.</description>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Land Only</fullName>
                </value>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Under Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Type__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s Type (Raw Land, Land and Building, etc.) It is manually populated.</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Raw Land</fullName>
                </value>
                <value>
                    <fullName>Land and Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Report_Detail__c</fullName>
        <description>This field is optional and specifies the text value used to provide comments regarding the subject assets and/or the request itself.  It is manually populated.</description>
        <label>Report Request Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Report_Due_Date__c</fullName>
        <description>This field is optional and specifies the Date that the Third Party Report is expected to be completed by the vendor. It is manually populated.</description>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Report_Ordered__c</fullName>
        <description>This field is optional and specifies the date of the vendor&apos;s order of the Third Party Report. It can be different than the date that the Third Party Report was created in nCino.  It is manually populated.</description>
        <label>Report Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Report_Rcvd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and specifies the Date that the Third Party Report was received from the vendor. It is manually populated.</description>
        <label>Report Rcvd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Report_Type__c</fullName>
        <description>This field is optional and specifies the type of Third Party Report (Tax Verification, CRE Appraisal, EPA Assessment, Business Valuation, Residential Property Appraisal, Investment Property Appraisal, Equipment Appraisal, etc.). It is manually populated.</description>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Verification</fullName>
                </value>
                <value>
                    <fullName>CRE Appraisal</fullName>
                </value>
                <value>
                    <fullName>EPA Assessment</fullName>
                </value>
                <value>
                    <fullName>Business Valuation</fullName>
                </value>
                <value>
                    <fullName>Residential Property Appraisal</fullName>
                </value>
                <value>
                    <fullName>Investment Property Appraisal</fullName>
                </value>
                <value>
                    <fullName>Equipment Appraisal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Site_Contact_Name__c</fullName>
        <description>This field is optional and specifies the subject property contact&apos;s phone number. It is manually populated.</description>
        <label>Site Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Site_Contact_Phone__c</fullName>
        <label>Site Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Site_Size__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s lot size. It is manually populated.</description>
        <label>Site Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Built__c</fullName>
        <description>This field is optional and specifies the year in which the subject property was built. It is manually populated.</description>
        <label>Year Built</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Zoning__c</fullName>
        <description>This field is optional and specifies the of subject property&apos;s zoning type (Residential, Commercial, Industrial, Agriculture, etc.). It is manually populated.</description>
        <label>Zoning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commerical</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Third Party Report</label>
    <nameField>
        <displayFormat>{MM}-{YY}-{0}</displayFormat>
        <label>Third Party Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>